--- a/www.nass.gov.ng/b9b1ec024f64b423a04d4bed6b6f279666b010fb.yml
+++ b/www.nass.gov.ng/b9b1ec024f64b423a04d4bed6b6f279666b010fb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Mar 2018 16:33:30 GMT
+    - Mon, 26 Mar 2018 14:15:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WlhvVwh4z9zP%2C2K-8iUvz1; path=/
+    - PHPSESSID=N8V6w2kx94b2Ppf4Xj4MJ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Mar 2018 16:33:30 GMT
+recorded_at: Mon, 26 Mar 2018 14:15:45 GMT
