--- a/www.nass.gov.ng/a841a9b40299a2dcc0b9e5d24cb2c3edd67da4c8.yml
+++ b/www.nass.gov.ng/a841a9b40299a2dcc0b9e5d24cb2c3edd67da4c8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Mar 2018 16:36:19 GMT
+    - Mon, 26 Mar 2018 14:19:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QPlCVbVShn9eYwHIOdy%2Ck3; path=/
+    - PHPSESSID=v%2Ct74BLyoYUbzOmDacOyC3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Mar 2018 16:36:19 GMT
+recorded_at: Mon, 26 Mar 2018 14:19:51 GMT
