--- a/www.nass.gov.ng/a66fb42bd0331ad278b4ad66546632d70814742e.yml
+++ b/www.nass.gov.ng/a66fb42bd0331ad278b4ad66546632d70814742e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Mar 2018 16:38:20 GMT
+    - Mon, 26 Mar 2018 14:22:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YGTh7F7Ku1pvMurSIP%2C%2Cc0; path=/
+    - PHPSESSID=fVITYcQKtEUaEpqvY4EIT1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Mar 2018 16:38:20 GMT
+recorded_at: Mon, 26 Mar 2018 14:22:55 GMT
